[metadata]
name = api-toolkit
version = 0.2.0
author = Kyle Ranous
author_email = kranous05@gmail.com
url = https://github.com/kyleranous/api_toolkit
description = Tools for creating APIs and API Connectors
long_description = file: README.md
long_description_content_type = text/markdown
keywords = api, connector, validation
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    emoji
    requests